infrastructure/k8s/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
        - name: comment-api
          image: guszti/posts-comment-api

---

apiVersion: v1
kind: Service
metadata:
  name: comment-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: comment
  ports:
    - name: comment
      protocol: TCP
      port: 4001
      targetPort: 4001
