infrastructure/k8s/post-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
        - name: post-api
          image: guszti/posts-post-api

---

apiVersion: v1
kind: Service
metadata:
  name: post-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: post
  ports:
    - name: post
      protocol: TCP
      port: 4000
      targetPort: 4000
