infrastructure/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.local
      http:
        paths:
          - path: /post/create
            backend:
              serviceName: post-clusterip-srv
              servicePort: 4000
          - path: /post
            backend:
              serviceName: query-clusterip-srv
              servicePort: 4002
          - path: /post/?(.*)/comment
            backend:
              serviceName: comment-clusterip-srv
              servicePort: 4001
          - path: /?(.*)
            backend:
              serviceName: client-clusterip-srv
              servicePort: 3000
